<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LancamentoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cod:">

        </TextView>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/etCod"
            android:inputType="number"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etQuantity">

        </TextView>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/etQtd"
            android:inputType="number"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etUnitValue">

        </TextView>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/etValor"
            android:inputType="numberDecimal"></EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etAmountHint">

        </TextView>

        <TextView
            android:id="@+id/tvAmountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etAmountValue"
            android:layout_marginStart="16dp"
            >

        </TextView>


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_confirm"
            android:id="@+id/btConfirmar"></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_list"
            android:id="@+id/btListar"></Button>
    </LinearLayout>

</LinearLayout>