<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LancamentoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cod">

        </TextView>

        <TextView
            android:padding="16dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCod"
            android:inputType="number"></TextView>
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etQuantity">

        </TextView>

        <TextView
            android:padding="16dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvQtd"
            android:inputType="number"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etUnitValue">

        </TextView>

        <TextView
            android:padding="16dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvValor"
            android:inputType="number"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etAmountHint">

        </TextView>

        <TextView
            android:padding="16dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAmountValue"
            android:inputType="number"
            android:text="@string/etAmountValue"
            ></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btConfirmarSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btConfirmWithSMS"></Button>

    </LinearLayout>

</LinearLayout>